Adding know more btn

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h1>Welcome to <br> Coffee craft</h1>
                         <p>Thank you for visiting our coffee online shop. We serve the best product available in the market</p>
                         <div class="order-btn">
-                            <a href="#">Get our Coffee</a>
+                            <a href="#">Get your Coffee</a>
                         </div>
                     </div>
             </section>
@@ -66,7 +66,11 @@
 
                 <div class="about-content">
                     <h2>About our goal</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore esse amet perferendis ab minima quidem iusto deserunt pariatur odit voluptate quas sequi sint, illum fuga at excepturi ex et suscipit earum dolorum sed ipsa explicabo. Accusantium voluptatum id, qui quam, necessitatibus autem culpa ab et suscipit temporibus ipsam, illum accusamus.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Inventore esse amet perferendis ab minima quidem iusto deserunt pariatur odit voluptate quas sequi sint, 
+                        illum fuga at excepturi ex et suscipit earum dolorum sed ipsa explicabo. Accusantium voluptatum id, qui quam, 
+                        necessitatibus autem culpa ab et suscipit temporibus ipsam, illum accusamus.</p>
+                    <a href="#" class="know-more-btn">Know More</a>
                 </div>
             </section>
 
