--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COFFEE CRAFT - GET THE BEST COFFEE EVER</title>
 
+    <!-- Fontawesome -->
     <link rel="stylesheet" href="assets/icons/fontawesome/css/all.min.css">
 
+    <!-- CSS Link -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -79,5 +81,8 @@
             </section>
         </main>
     </div>
+
+    <script src="js/jquery/jQuery.js"></script>
+    <script src="js/custom/script.js"></script>
 </body>
 </html>
