--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     <div class="root">
+
+        <!-- ========== HEADER Section Start ========== -->
         <header id="header">
             <div class="logo">
                 <img src="assets/images/coffee-craft-logo.svg" alt="coffee craft logo">
@@ -47,9 +49,10 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
+        <!-- ========== HEADER Section End ========== -->
 
         <main class="container"> 
-            <!-- HERO Section Start -->
+            <!-- ========== HERO Section Start ========== -->
             <section class="hero" aria-label="hero section with coffee image background">
                     <div class="hero-content">
                         <h1>Welcome to <br> Coffee craft</h1>
@@ -61,7 +64,7 @@
             </section>
             <!-- HERO Section End -->
 
-            <!-- ABOUT Section Start -->
+            <!-- ========== ABOUT Section Start ========== -->
             <section class="about" id="about">
                 <div class="about-image" aria-label="about coffee image">
                 </div>
@@ -76,12 +79,14 @@
                 </div>
             </section>
 
+            <!-- ========== PRODUCTS Section Start ========== -->
             <section class="products" id="products">
                 <div class="products-heading">
                     <h2>Get Our Products</h2>
                 </div>
 
-                <div class="product-container"> {
+                <!-- Product container -->
+                <div class="product-container"> 
                     <div class="product-content">
                         <div class="product-image">
                             <img src="assets/images/product-1.jpg" alt="product one image">
