Adding Services section.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#products">Our products</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact us</a></li>
                 </ul>
 
                 <div class="social-icon-mobile">
@@ -156,6 +156,43 @@
                             </p>
     
                             <button class="view-product">View Product</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- ========== SERVICES Section start ========== -->
+            <section class="services" id="services">
+                <div class="services-heading">
+                    <h2>Our Services</h2>
+                </div>
+
+                <div class="service-container">
+                    <div class="service-content">
+                        <div class="service-content-image">
+                            <img src="assets/images/service-1.jpg" alt="Quality service image">
+                        </div>
+                        <div class="service-content-description">
+                            <h3>Quality Product</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab praesentium laboriosam omnis similique eligendi officiis.</p>
+                        </div>
+                    </div>
+                    <div class="service-content">
+                        <div class="service-content-image">
+                            <img src="assets/images/service-2.jpg" alt="Quality service image">
+                        </div>
+                        <div class="service-content-description">
+                            <h3>Fast Delivery</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab praesentium laboriosam omnis similique eligendi officiis.</p>
+                        </div>
+                    </div>
+                    <div class="service-content">
+                        <div class="service-content-image">
+                            <img src="assets/images/service-3.jpg" alt="Quality service image">
+                        </div>
+                        <div class="service-content-description">
+                            <h3>All Time Support</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab praesentium laboriosam omnis similique eligendi officiis.</p>
                         </div>
                     </div>
                 </div>
