Adding CONTACT section.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,39 @@
                     </div>
                 </div>
             </section>
+
+            <!-- ========== CONTACT Section start ========== -->
+            <section class="contact" id="contact">
+                <div class="contact-heading">
+                    <h2>Contact Us</h2>
+                </div>
+
+                <div class="contact-container">
+                    <form action="/">
+                        <div class="contact-details">
+                            <div class="email-container">
+                                <input type="email" name="email" id="email" placeholder="Enter your Email...">
+                            </div>
+                            <div class="name-container">
+                                <input type="text" name="name" id="name" placeholder="Enter your Name...">
+                            </div>
+                            <div class="phone-container">
+                                <input type="phone" name="phone" id="phone" placeholder="Enter your phone Number...">
+                            </div>
+    
+                            <div class="subject-container">
+                                <input type="text" name="subject" id="subject" placeholder="Enter the subject...">
+                            </div>
+                        </div>
+
+                        <div class="message-container">
+                            <textarea name="message" id="message" placeholder="Enter your message..."></textarea>
+                        </div>
+
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </section>
         </main>
     </div>
 
