Adding class to anchor tag for smooth scroll animation with jQuery.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </div>
 
                 <ul class="nav-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#products">Our products</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact us</a></li>
+                    <li><a class="scrollTo" href="#hero">Home</a></li>
+                    <li><a class="scrollTo" href="#about">About</a></li>
+                    <li><a class="scrollTo" href="#products">Our products</a></li>
+                    <li><a class="scrollTo" href="#services">Services</a></li>
+                    <li><a class="scrollTo" href="#contact">Contact us</a></li>
                 </ul>
 
                 <div class="social-icon-mobile">
@@ -53,7 +53,7 @@
 
         <main class="container"> 
             <!-- ========== HERO Section Start ========== -->
-            <section class="hero" aria-label="hero section with coffee image background">
+            <section class="hero" aria-label="hero section with coffee image background" id="hero">
                     <div class="hero-content">
                         <h1>Welcome to <br> Coffee craft</h1>
                         <p>Thank you for visiting our coffee online shop. We serve the best product available in the market</p>
