Changing form animations and adding footer.

--- a/index.html
+++ b/index.html
@@ -210,23 +210,23 @@
 
                 <div class="contact-container">
                     <form action="/">
-                        <div class="contact-details" data-aos="fade-down">
-                            <div class="email-container">
+                        <div class="contact-details">
+                            <div class="email-container" data-aos="fade-right">
                                 <input type="email" name="email" id="email" placeholder="Enter your Email...">
                             </div>
-                            <div class="name-container">
+                            <div class="name-container" data-aos="fade-right" data-aos-delay="200">
                                 <input type="text" name="name" id="name" placeholder="Enter your Name...">
                             </div>
-                            <div class="phone-container">
+                            <div class="phone-container" data-aos="fade-right" data-aos-delay="400">
                                 <input type="phone" name="phone" id="phone" placeholder="Enter your phone Number...">
                             </div>
     
-                            <div class="subject-container">
+                            <div class="subject-container" data-aos="fade-right" data-aos-delay="600">
                                 <input type="text" name="subject" id="subject" placeholder="Enter the subject...">
                             </div>
                         </div>
 
-                        <div class="message-container" data-aos="fade-up">
+                        <div class="message-container" data-aos="fade-right" data-aos-delay="800">
                             <textarea name="message" id="message" placeholder="Enter your message..."></textarea>
                         </div>
 
@@ -236,6 +236,11 @@
             </section>
         </main>
     </div>
+
+    <footer class="footer" id="footer">
+        
+    </footer>
+
     <script src="assets/animation/aos-master/dist/aos.js"></script>
     <script src="js/jquery/jQuery.js"></script>
     <script src="js/custom/script.js"></script>
