--- a/index.html
+++ b/index.html
@@ -238,7 +238,44 @@
     </div>
 
     <footer class="footer" id="footer">
-        
+        <div class="footer-left">
+            <div class="site-links">
+                <h4>Site Links</h4>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#products">Our Products</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-services">
+                <h4>Services</h4>
+                <ul>
+                    <li><a href="#">Best Quality Products</a></li>
+                    <li><a href="#">24/7 Support</a></li>
+                    <li><a href="#">Before Time Delivery</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-right">
+            <div class="footer-logo">
+                <img src="assets/images/coffee-craft-logo.svg" alt="company's logo in footer">
+            </div>
+
+            <form class="news-letter">
+                <input type="email" name="email" id="email" placeholder="Your email here...">
+                <button type="submit" aria-label="submit your email for newsletter"><i class="fa-solid fa-leaf"></i></button>
+            </form>
+
+            <div class="social-media">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </div>
     </footer>
 
     <script src="assets/animation/aos-master/dist/aos.js"></script>
