Adding Copy right.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </div>
+
+            <div class="copy-right">
+                <p class="text">@ 2022 all rights reserved</p>
+            </div>
         </div>
     </footer>
 
