Small changes in footer links.

--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
             <div class="site-links">
                 <h4>Site Links</h4>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#products">Our Products</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a class="scrollTo" href="#hero">Home</a></li>
+                    <li><a class="scrollTo" href="#about">About Us</a></li>
+                    <li><a class="scrollTo" href="#products">Our Products</a></li>
+                    <li><a class="scrollTo" href="#services">Services</a></li>
+                    <li><a class="scrollTo" href="#contact">Contact Us</a></li>
                 </ul>
             </div>
 
