--- a/index.html
+++ b/index.html
@@ -240,37 +240,37 @@
     <footer class="footer" id="footer">
         <div class="footer-left">
             <div class="site-links">
-                <h4>Site Links</h4>
+                <h4 data-aos="fade-down">Site Links</h4>
                 <ul>
-                    <li><a class="scrollTo" href="#hero">Home</a></li>
-                    <li><a class="scrollTo" href="#about">About Us</a></li>
-                    <li><a class="scrollTo" href="#products">Our Products</a></li>
-                    <li><a class="scrollTo" href="#services">Services</a></li>
-                    <li><a class="scrollTo" href="#contact">Contact Us</a></li>
+                    <li data-aos="fade-up"><a class="scrollTo" href="#hero">Home</a></li>
+                    <li data-aos="fade-up" data-aos-delay="200"><a class="scrollTo" href="#about">About Us</a></li>
+                    <li data-aos="fade-up" data-aos-delay="400"><a class="scrollTo" href="#products">Our Products</a></li>
+                    <li data-aos="fade-up" data-aos-delay="600"><a class="scrollTo" href="#services">Services</a></li>
+                    <li data-aos="fade-up" data-aos-delay="800"><a class="scrollTo" href="#contact">Contact Us</a></li>
                 </ul>
             </div>
 
             <div class="footer-services">
-                <h4>Services</h4>
+                <h4 data-aos="fade-down">Services</h4>
                 <ul>
-                    <li><a href="#">Best Quality Products</a></li>
-                    <li><a href="#">24/7 Support</a></li>
-                    <li><a href="#">Before Time Delivery</a></li>
+                    <li data-aos="fade-up"><a href="#">Best Quality Products</a></li>
+                    <li data-aos="fade-up" data-aos-delay="200"><a href="#">24/7 Support</a></li>
+                    <li data-aos="fade-up" data-aos-delay="400"><a href="#">Before Time Delivery</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-right">
-            <div class="footer-logo">
+            <div class="footer-logo" data-aos="fade-down">
                 <img src="assets/images/coffee-craft-logo.svg" alt="company's logo in footer">
             </div>
 
-            <form class="news-letter">
+            <form class="news-letter" data-aos="fade-up">
                 <input type="email" name="email" id="email" placeholder="Your email here...">
                 <button type="submit" aria-label="submit your email for newsletter"><i class="fa-solid fa-leaf"></i></button>
             </form>
 
-            <div class="social-media">
+            <div class="social-media" data-aos="fade-up" data-aos-delay="200">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
