Changes in footer forn input's placeholder.

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </div>
 
             <form class="news-letter" data-aos="fade-up">
-                <input type="email" name="email" id="email" placeholder="Your email here...">
+                <input type="email" name="email" id="email" placeholder="Email for Newslettera!...">
                 <button type="submit" aria-label="submit your email for newsletter"><i class="fa-solid fa-leaf"></i></button>
             </form>
 
