Fixing some accessibility issue.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 </ul>
 
                 <div class="social-icon-mobile">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" aria-label="facebook icon"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" aria-label="instagram icon"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </nav>
 
             <div class="social-icon" data-aos="fade-down">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" aria-label="facebook icon"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#" aria-label="instagram icon"><i class="fa-brands fa-instagram"></i></a>
             </div>
 
             <div class="hamburger">
@@ -70,7 +70,7 @@
 
             <!-- ========== ABOUT Section Start ========== -->
             <section class="about" id="about">
-                <div class="about-image" aria-label="about coffee image" data-aos="fade-right">
+                <div class="about-image" data-aos="fade-right">
                 </div>
 
                 <div class="about-content" data-aos="fade-left">
@@ -266,14 +266,14 @@
             </div>
 
             <form class="news-letter" data-aos="fade-up">
-                <input type="email" name="email" id="email" placeholder="Email for Newslettera!...">
+                <input type="email" name="email-footer" id="email-footer" placeholder="Email for Newslettera!...">
                 <button type="submit" aria-label="submit your email for newsletter"><i class="fa-solid fa-leaf"></i></button>
             </form>
 
             <div class="social-media" data-aos="fade-up" data-aos-delay="200">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" aria-label="facebook icon"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#" aria-label="instagram icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" aria-label="twitter icon"><i class="fa-brands fa-twitter"></i></a>
             </div>
 
             <div class="copy-right">
