Adding product viewer.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="product-viewer">
+                    <img src="./assets/images/product-2.jpg" alt="">
+                    <div class="close-product">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
+                </div>
             </section>
 
             <!-- ========== SERVICES Section start ========== -->
