Removing src from product-viewer img.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="product-viewer">
-                    <img src="./assets/images/product-2.jpg" alt="">
+                    <img src alt="">
                     <div class="close-product">
                         <i class="fa-solid fa-xmark"></i>
                     </div>
