Adding data-aos-offset to submit button in contact form.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <textarea name="message" id="message" placeholder="Enter your message..."></textarea>
                         </div>
 
-                        <button type="submit" data-aos="fade-left">Submit</button>
+                        <button type="submit" data-aos="fade-left" data-aos-offset="25">Submit</button>
                     </form>
                 </div>
             </section>
